syntax = "proto3";

// proto的包名，给别的proto文件import该文件的字段时使用
package orznewbie.api.test;

// ;分号前的路径为生成的pb文件的相对路径，会被命令行的go_out参数覆盖;分号后为包名
option go_package = "github.com/orznewbie/api/test;testpb";

import "google/protobuf/field_mask.proto";

message Admin {
  string id = 1;
  string pwd = 2;
}

message Tourist {
  string ip = 1;
}

message User {
  uint64 id = 1;
  string name = 2;
  uint32 age = 3;
  oneof role {
    Admin admin = 4;
    Tourist tourist = 5;
  }
}

message GetUserRequest {
  uint64 id = 1;
  google.protobuf.FieldMask get_mask = 2;
}

message CreateUserRequest {
  User user = 1;
}

message UpdateUserRequest {
  User user = 1;
  google.protobuf.FieldMask update_mask = 2;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (User) {}
  rpc CreateUser(CreateUserRequest) returns (User) {}
  rpc UpdateUser(UpdateUserRequest) returns (User) {}
}


